@@ -40,6 +40,7 @@
 	* Added a configuration option to set the default sort order per sort option
 	* Added a parameter for ATagParams to the link viewhelper, credits Andre Westbunk
 	* Added a TypoScript option to control loading of Javascript files
+	* Added a TypoScript option to set a fixed direction for sorting options
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
